--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   either_dart: ^0.1.4
   firebase_core: ^1.14.1
+  firebase_remote_config: ^2.0.4
 
 dev_dependencies:
   flutter_test:
