--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   either_dart: ^0.1.4
   firebase_core: ^1.14.1
   firebase_remote_config: ^2.0.4
+  # firebase_analytics: ^9.1.5
 
 dev_dependencies:
   flutter_test:
